<resources>
    <string name="app_name">Doctor</string>

    <string name="strDoctorName">Dr JAYESH PATEL</string>


    <!-- Dashboard Screen-->
    <string name="strDashboard">Dashboard</string>
    <string name="strCreateProfile">Create Profile</string>
    <string name="strCreatePatientVisit">Create Patient Visit</string>
    <string name="strDueAmount">Due Amount</string>
    <string name="strPatientHistory">Patient History</string>
    <string name="strSettings">Settings</string>
    <string name="strBackupData">Backup Data</string>
    <string name="strRestoreData">Restore Data</string>
    <string name="strMoreDetails"><u>Show Details</u></string>
    <string name="strHideDetails"><u>Hide Details</u></string>



    <string name="strProfileTitle">Create Patient Profile</string>

    <!-- Create Patient Profile -->
    <string name="strProfileName">Name</string>
    <string name="strProfileAge">Age</string>
    <string name="strProfileSex">Sex :</string>
    <string name="strProfileMale">Male</string>
    <string name="strProfileFemale">Female</string>
    <string name="strProfileMobile">Mobile</string>
    <string name="strProfileAddress">Address</string>
    <string name="strProfileQualification">Qualification</string>
    <string name="strProfileOccupation">Occupation</string>
    <string name="strProfileDateOfBirth">Date of Birth</string>
    <string name="strProfileFamilyRefernce">Family Reference</string>
    <string name="strProfilePayment">Amount</string>
    <string name="strProfilePaymentStatus">Status:</string>
    <string name="strProfilePaid">Paid</string>
    <string name="strProfileUnpaid">Unpaid</string>
    <string-array name="strProfileFamilyCharacter">
        <item>Select</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Wife</item>
    </string-array>
    <string name="strProfileAddPrescription"><u>Add Prescription</u></string>
    <string name="strProfileSubmit">Submit</string>

    <string name="msgProfileName">Please enter Name.</string>
    <string name="msgProfileAge">Please enter Age.</string>
    <string name="msgProfileSex">Please select Sex.</string>
    <string name="msgProfileMobile">Please enter mobile.</string>
    <string name="strSpecialInstrustion">Special Instruction</string>
    <string name="strPastHistory">Past History</string>


    <!-- Create Patient Visit -->
    <string name="strVisitDate">Visit Date</string>
    <string name="strVisitReport"><u>Reprt</u></string>

    <!-- History Page-->
    <string name="strFromDate">From Date</string>
    <string name="strToDate">To Date</string>
    <string name="strNOFromDate">Please select from date.</string>
    <string name="strNOToDate">Please select to date.</string>

    <!-- Common Message -->
    <string name="msgNotInternet">Please check you internet. Try Again...</string>
    <string name="msgResponseNull">Something went wrong.Please Try Again...</string>

</resources>
